--- a/client/sass/_repo-content.scss
+++ b/client/sass/_repo-content.scss
@@ -59,6 +59,7 @@
   }
   .repoContent-fileSystem {
     flex: 0 0 70%;
+    width: 70%;
   }
   .repoContent-fsRow {
     border-top: none;
